# mcp-host-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mcp_host_bridge/: __init__.py  __main__.py  cli.py  install.py  relay.py  services.py
tests/: test_install.py  test_relay.py  test_services.py
