[project]
name = "mcp-host-bridge"
version = "0.2.0"
description = "A tiny, configurable loopback-to-remote TCP/UDP relay so sandboxed MCP clients (e.g. Claude Desktop) can reach a service on another host."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Stefan Brunner (AE5VG)", email = "me@stefanbrunner.org" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "tcp",
    "port-forward",
    "loopback",
    "bridge",
    "claude-desktop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
]
# Runtime is standard-library only by design — the whole point is a tiny,
# trustworthy relay with nothing to audit.
dependencies = []

[project.scripts]
mcp-host-bridge = "mcp_host_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/sbrunner-atx/mcp-host-bridge"
Repository = "https://github.com/sbrunner-atx/mcp-host-bridge"
Issues = "https://github.com/sbrunner-atx/mcp-host-bridge/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Used only in CI to produce the single-file binaries; not a runtime dependency.
build = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_host_bridge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
